# engineers-hub

./: .gitignore  CLAUDE.md  Makefile  README.md
docs/api/: tech-road-api-spec.md
docs/architecture/: domain-model.md  system-architecture.md
docs/planning/: development-phases.md
docs/requirements/functional/: tech-road-requirements.md
docs/requirements/non-functional/: performance-requirements.md
infrastructure/docker/: docker-compose.dev.yml  init-db.sql
services/tech-road/api/: .env.example  Cargo.toml  Dockerfile.dev  README.md
services/tech-road/api/src/: main.rs
services/tech-road/web/: Dockerfile.dev
